courses/430_programming-languages/assignment-6/tests/error/hw4_error25.nex
print "should not get here:n";
1 / 0;
if (3) { print 1; }
